# cq

./: README.md  pyproject.toml  squeue_mock_output.txt  squeue_parser.py  squeue_styles.py  squeue_viewer.css  squeue_viewer.py
.github/workflows/: ci.yml
tests/: test_parser.py  test_styles.py  test_viewer.py
